--- a/msg/msg.csproj
+++ b/msg/msg.csproj
@@ -68,10 +68,10 @@
     <Compile Include="InputForms\GropNameEditInput.Designer.cs">
       <DependentUpon>GropNameEditInput.cs</DependentUpon>
     </Compile>
-    <Compile Include="Misk\Chat.cs">
+    <Compile Include="Misc\Chat.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Misk\Chat.Designer.cs">
+    <Compile Include="Misc\Chat.Designer.cs">
       <DependentUpon>Chat.cs</DependentUpon>
     </Compile>
     <Compile Include="Msgs\ChatInfo.cs">
@@ -110,10 +110,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Misk\Users.cs">
+    <Compile Include="Misc\Users.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Misk\Users.Designer.cs">
+    <Compile Include="Misc\Users.Designer.cs">
       <DependentUpon>Users.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Forms\AddChat.resx">
@@ -125,7 +125,7 @@
     <EmbeddedResource Include="InputForms\GropNameEditInput.resx">
       <DependentUpon>GropNameEditInput.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Misk\Chat.resx">
+    <EmbeddedResource Include="Misc\Chat.resx">
       <DependentUpon>Chat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Msgs\ChatInfo.resx">
@@ -152,7 +152,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Misk\Users.resx">
+    <EmbeddedResource Include="Misc\Users.resx">
       <DependentUpon>Users.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
