--- a/msg/msg.csproj
+++ b/msg/msg.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Misc\Users.resx">
       <DependentUpon>Users.cs</DependentUpon>
@@ -168,6 +169,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\notification.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Notification.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
